--- a/style.css
+++ b/style.css
@@ -1,5 +1,23 @@
-.info {
-    color:royalblue;
-    font-Family: Arial ;
-    font-size : 10pt;
+img{
+    border-radius: 10px;
+}
+
+
+.u-center-box {
+    display: flex;
+    justify-content: center;
+}
+
+
+
+h1{
+    background-color: rgb(107, 161, 197);
+    border-radius: 10px;
+    padding-top: 10px;
+    padding-bottom: 100px;
+    padding-left: 1px;
+    padding-right: 50px;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 25px;
 }
