--- a/style.css
+++ b/style.css
@@ -1,23 +1,12 @@
-img{
-    border-radius: 10px;
+img {
+    width: 900px;
+    height: 600px
 }
-
-
-.u-center-box {
-    display: flex;
+.image-box {
+    display: flex ;
     justify-content: center;
 }
-
-
-
-h1{
-    background-color: rgb(107, 161, 197);
-    border-radius: 10px;
-    padding-top: 10px;
-    padding-bottom: 100px;
-    padding-left: 1px;
-    padding-right: 50px;
-    color: white;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 25px;
+h1 {
+    
+    justify-content: center;
 }
