--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ img {
     display: flex ;
     justify-content: center;
     width: 950px;
-    height: 600px
+    height: 600px;
 }
 .image-box {
     display: flex ;
@@ -20,7 +20,14 @@ p {
     display: flex ;
     justify-content: center;
 }
-.bmwsw {
+
+a   {
     display: flex ;
     justify-content: center;
+}
+h1{
+
+    color: rgb(20, 0, 0);
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 25px;
 }
