--- a/style.css
+++ b/style.css
@@ -31,3 +31,14 @@ h1{
     font-family: 'Courier New', Courier, monospace;
     font-size: 25px;
 }
+h2 {
+    background-color: rgb(0, 0, 0);
+    border-radius: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 100px;
+    padding-right: 100px;
+    color: rgb(255, 255, 255);
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 35px;
+}
